@@ -177,11 +177,11 @@ dbLoadRecords("db/VME-TTB-trig.db", "LOCA=B34,UNIT=EV05,SYS=SYS0,IOC=IOC:B34:EV0
 
 (4) Add ErConfigure for each EVR before iocInit.
 
-    VME:      ErConfigure(<instance>,<address>,<vector>,<level>,0)
-    PMC:      ErConfigure(<instance>,    0    ,    0   ,   0   ,1)
-    Embedded: ErConfigure(<instance>,    0    ,<vector>,<level>,2)
+    VME:      ErConfigure(<instance>,<address>,<vector>,<level>,0, <starting slot>)
+    PMC:      ErConfigure(<instance>,    0    ,    0   ,   0   ,1, 0)
+    Embedded: ErConfigure(<instance>,    0    ,<vector>,<level>,2, 0)
 
-    PCI-E:    ErConfigure(<instance>,    0    ,    0   ,   0   ,4)
+    PCI-E:    ErConfigure(<instance>,    0    ,    0   ,   0   ,4, 0)
 
     where instance = EVR instance, starting from 0, incrementing by 1
                      for each subsequent card.  Only 1 EVR instance
@@ -201,6 +201,10 @@ dbLoadRecords("db/VME-TTB-trig.db", "LOCA=B34,UNIT=EV05,SYS=SYS0,IOC=IOC:B34:EV0
        or 2	   = Embedded
 
        or 4        = PCI-E
+
+    and starting slot = first VME slot to start looking for EVRs.
+			Set to 0 if their is only one CPU in the crate.
+		        (0 for PMC)
 
 (5) Add evrInitialize (after ErConfigure) if a fiducial routine will be
     registered before iocInit driver initialization:
