@@ -1,5 +1,8 @@
 Release Notes for the event package
 -----------------------------------
+event-R4-1-2:
+      * Add optional argument to ErConfigure for starting VME slot number to 
+	look for EVRs.
 event-R4-1-1:
       Removed SYS=SYS1 as a default value. This forces us to define SYS,
       and pay attention to its definition. The IOC will break on startup
